src/.antlr/DartGrammarsParser.java
// Generated from c:\Users\User\Desktop\compiler\compiler\src\DartGrammars.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DartGrammarsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		IF=25, ELSE=26, SWITCH=27, CASE=28, DEFAULT=29, BREAK=30, CONTINUE=31, 
		WHILE=32, DO=33, FOR=34, FOREACH=35, FINAL=36, CONST=37, VAR=38, DYNAMIC=39, 
		VOID=40, INT=41, DOUBLE=42, STRING=43, LIST=44, BOOL=45, TRUE=46, FALSE=47, 
		OBJECT=48, FUNCTION=49, RETURN=50, LATE=51, REQUIRED=52, ASYNC=53, AWAIT=54, 
		CLASS=55, EXTENDS=56, INTERFACE=57, IMPLEMENTS=58, ABSTRACT=59, OVERRIDE=60, 
		THIS=61, STATIC=62, NEW=63, WS=64, COMMENT=65, MULTILINE_COMMENT=66, MATERIAL_APP=67, 
		TITLE=68, HOME=69, SCAFFOLD=70, BODY=71, BACKGROUND_COLOR=72, COLUMN=73, 
		ROW=74, MAIN_AXIS_ALIGNMENT=75, CROSS_AXIS_ALIGNMENT=76, TEXT=77, COLOR=78, 
		SIZE=79, STYLE=80, CONTAINER=81, SIZEDBOX=82, WIDTH=83, HEIGHT=84, MARGIN=85, 
		INK_WELL=86, IMAGE=87, FIT=88, BOX_FIT=89, STACK=90, STACK_FIT=91, BUTTON=92, 
		SCROLL_VIEW=93, SCROLL_DIRECTION=94, PADDING=95, VALUES=96, ZERO=97, ALL=98, 
		SYMMETRIC=99, COSTUME=100, LEFT=101, RIGHT=102, TOP=103, BOTTOM=104, CHILD=105, 
		CHILDREN=106, ON_TAP=107, COLORS=108, STYLES=109, ALIGNMENT=110, HORIZONTAL=111, 
		VERTICAL=112, COMMA=113, SEMICOLON=114, INT_NUM=115, DOUBLE_NUM=116, CHARACTERS=117, 
		ID=118;
	public static final int
		RULE_start = 0, RULE_number = 1, RULE_positive = 2, RULE_negative = 3, 
		RULE_block = 4, RULE_statement = 5, RULE_condition = 6, RULE_comparison = 7, 
		RULE_ifStatement = 8, RULE_elseIf = 9, RULE_else = 10, RULE_switchStatement = 11, 
		RULE_switchBody = 12, RULE_case = 13, RULE_defaultCase = 14, RULE_caseBody = 15, 
		RULE_whileStatement = 16, RULE_doWhileStatement = 17, RULE_forStatement = 18, 
		RULE_initialCondition = 19, RULE_increment = 20, RULE_foreachStatement = 21, 
		RULE_type = 22, RULE_varOrType = 23, RULE_declaration = 24, RULE_initialization = 25, 
		RULE_assignment = 26, RULE_list = 27, RULE_listElement = 28, RULE_voidOrType = 29, 
		RULE_signature = 30, RULE_function = 31, RULE_unnamedFunction = 32, RULE_arguments = 33, 
		RULE_positionalNamedArguments = 34, RULE_positionalArguments = 35, RULE_namedArguments = 36, 
		RULE_arg = 37, RULE_functionBody = 38, RULE_returnStatement = 39, RULE_class = 40, 
		RULE_classBody = 41, RULE_attribute = 42, RULE_method = 43, RULE_defaultConstructer = 44, 
		RULE_namedConstructer = 45, RULE_consArguments = 46, RULE_consPositionalNamedArguments = 47, 
		RULE_consPositionalArguments = 48, RULE_consNamedArguments = 49, RULE_consArg = 50, 
		RULE_functionCall = 51, RULE_object = 52, RULE_parameters = 53, RULE_positionalNamedParameters = 54, 
		RULE_positionalParameters = 55, RULE_namedParameters = 56, RULE_parameter = 57, 
		RULE_expression = 58, RULE_component = 59, RULE_materialApp = 60, RULE_materialAppAtts = 61, 
		RULE_materialTitle = 62, RULE_materialHome = 63, RULE_scaffold = 64, RULE_scaffoldAtts = 65, 
		RULE_scaffoldBackground = 66, RULE_scaffoldBody = 67, RULE_column = 68, 
		RULE_row = 69, RULE_column_rowAtts = 70, RULE_mainAxis = 71, RULE_crossAxis = 72, 
		RULE_children = 73, RULE_stack = 74, RULE_stackAtts = 75, RULE_stackFit = 76, 
		RULE_text = 77, RULE_textAtts = 78, RULE_color = 79, RULE_textSize = 80, 
		RULE_textStyle = 81, RULE_container = 82, RULE_containerAtts = 83, RULE_width = 84, 
		RULE_height = 85, RULE_child = 86, RULE_sizedBox = 87, RULE_sizedBoxAtts = 88, 
		RULE_padding = 89, RULE_paddingAtts = 90, RULE_values = 91, RULE_horizontalOrVertical = 92, 
		RULE_costumeValues = 93, RULE_inkWell = 94, RULE_inkWellAtts = 95, RULE_onTap = 96, 
		RULE_image = 97, RULE_imageAtts = 98, RULE_imageFit = 99, RULE_button = 100, 
		RULE_buttonAtts = 101, RULE_scrollView = 102, RULE_scrollViewAtts = 103, 
		RULE_scrollDirection = 104;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "number", "positive", "negative", "block", "statement", "condition", 
			"comparison", "ifStatement", "elseIf", "else", "switchStatement", "switchBody", 
			"case", "defaultCase", "caseBody", "whileStatement", "doWhileStatement", 
			"forStatement", "initialCondition", "increment", "foreachStatement", 
			"type", "varOrType", "declaration", "initialization", "assignment", "list", 
			"listElement", "voidOrType", "signature", "function", "unnamedFunction", 
			"arguments", "positionalNamedArguments", "positionalArguments", "namedArguments", 
			"arg", "functionBody", "returnStatement", "class", "classBody", "attribute", 
			"method", "defaultConstructer", "namedConstructer", "consArguments", 
			"consPositionalNamedArguments", "consPositionalArguments", "consNamedArguments", 
			"consArg", "functionCall", "object", "parameters", "positionalNamedParameters", 
			"positionalParameters", "namedParameters", "parameter", "expression", 
			"component", "materialApp", "materialAppAtts", "materialTitle", "materialHome", 
			"scaffold", "scaffoldAtts", "scaffoldBackground", "scaffoldBody", "column", 
			"row", "column_rowAtts", "mainAxis", "crossAxis", "children", "stack", 
			"stackAtts", "stackFit", "text", "textAtts", "color", "textSize", "textStyle", 
			"container", "containerAtts", "width", "height", "child", "sizedBox", 
			"sizedBoxAtts", "padding", "paddingAtts", "values", "horizontalOrVertical", 
			"costumeValues", "inkWell", "inkWellAtts", "onTap", "image", "imageAtts", 
			"imageFit", "button", "buttonAtts", "scrollView", "scrollViewAtts", "scrollDirection"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'-'", "'{'", "'}'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", 
			"'('", "')'", "':'", "'='", "'+='", "'-='", "'*='", "'/='", "'in'", "'.'", 
			"'['", "']'", "'*'", "'/'", "'+'", "'if'", "'else'", "'switch'", "'case'", 
			"'default'", "'break'", "'continue'", "'while'", "'do'", "'for'", "'foreach'", 
			"'final'", "'const'", "'var'", "'dynamic'", "'void'", "'int'", "'double'", 
			"'String'", "'List'", "'bool'", "'true'", "'false'", "'Object'", "'Function'", 
			"'return'", "'late'", "'required'", "'async'", "'await'", "'class'", 
			"'extends'", "'interface'", "'implements'", "'abstract'", "'@override'", 
			"'this'", "'static'", "'new'", null, null, null, "'MaterialApp'", "'title'", 
			"'home'", "'Scaffold'", "'body'", "'backgroundColor'", "'Column'", "'Row'", 
			"'mainAxisAlignment'", "'crossAxisAlignment'", "'Text'", "'color'", "'size'", 
			"'style'", "'Container'", "'SizedBox'", "'width'", "'height'", "'margin'", 
			"'InkWell'", "'Image'", "'fit'", null, "'Stack'", null, "'Button'", "'ScrollView'", 
			"'scrollDirection'", "'Padding'", "'values'", "'Values.zero'", "'Values.all'", 
			"'Values.symmetric'", "'Values.costume'", "'left'", "'right'", "'top'", 
			"'bottom'", "'child'", "'children'", "'onTap'", null, null, null, "'horizontal'", 
			"'vertical'", "','", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "IF", "ELSE", "SWITCH", "CASE", "DEFAULT", "BREAK", "CONTINUE", 
			"WHILE", "DO", "FOR", "FOREACH", "FINAL", "CONST", "VAR", "DYNAMIC", 
			"VOID", "INT", "DOUBLE", "STRING", "LIST", "BOOL", "TRUE", "FALSE", "OBJECT", 
			"FUNCTION", "RETURN", "LATE", "REQUIRED", "ASYNC", "AWAIT", "CLASS", 
			"EXTENDS", "INTERFACE", "IMPLEMENTS", "ABSTRACT", "OVERRIDE", "THIS", 
			"STATIC", "NEW", "WS", "COMMENT", "MULTILINE_COMMENT", "MATERIAL_APP", 
			"TITLE", "HOME", "SCAFFOLD", "BODY", "BACKGROUND_COLOR", "COLUMN", "ROW", 
			"MAIN_AXIS_ALIGNMENT", "CROSS_AXIS_ALIGNMENT", "TEXT", "COLOR", "SIZE", 
			"STYLE", "CONTAINER", "SIZEDBOX", "WIDTH", "HEIGHT", "MARGIN", "INK_WELL", 
			"IMAGE", "FIT", "BOX_FIT", "STACK", "STACK_FIT", "BUTTON", "SCROLL_VIEW", 
			"SCROLL_DIRECTION", "PADDING", "VALUES", "ZERO", "ALL", "SYMMETRIC", 
			"COSTUME", "LEFT", "RIGHT", "TOP", "BOTTOM", "CHILD", "CHILDREN", "ON_TAP", 
			"COLORS", "STYLES", "ALIGNMENT", "HORIZONTAL", "VERTICAL", "COMMA", "SEMICOLON", 
			"INT_NUM", "DOUBLE_NUM", "CHARACTERS", "ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DartGrammars.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DartGrammarsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(DartGrammarsParser.EOF, 0); }
		public List<ClassContext> class() {
			return getRuleContexts(ClassContext.class);
		}
		public ClassContext class(int i) {
			return getRuleContext(ClassContext.class,i);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(212); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(212);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case CLASS:
				case ABSTRACT:
					{
					setState(210);
					class();
					}
					break;
				case DYNAMIC:
				case VOID:
				case INT:
				case DOUBLE:
				case STRING:
				case LIST:
				case BOOL:
				case OBJECT:
				case FUNCTION:
				case ID:
					{
					setState(211);
					function();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(214); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DYNAMIC) | (1L << VOID) | (1L << INT) | (1L << DOUBLE) | (1L << STRING) | (1L << LIST) | (1L << BOOL) | (1L << OBJECT) | (1L << FUNCTION) | (1L << CLASS) | (1L << ABSTRACT))) != 0) || _la==ID );
			setState(216);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumberContext extends ParserRuleContext {
		public NumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number; }
	 
		public NumberContext() { }
		public void copyFrom(NumberContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NegativeNumberContext extends NumberContext {
		public NegativeContext negative() {
			return getRuleContext(NegativeContext.class,0);
		}
		public NegativeNumberContext(NumberContext ctx) { copyFrom(ctx); }
	}
	public static class PositveNumberContext extends NumberContext {
		public PositiveContext positive() {
			return getRuleContext(PositiveContext.class,0);
		}
		public PositveNumberContext(NumberContext ctx) { copyFrom(ctx); }
	}

	public final NumberContext number() throws RecognitionException {
		NumberContext _localctx = new NumberContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_number);
		try {
			setState(220);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT_NUM:
			case DOUBLE_NUM:
				_localctx = new PositveNumberContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(218);
				positive();
				}
				break;
			case T__0:
				_localctx = new NegativeNumberContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(219);
				negative();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PositiveContext extends ParserRuleContext {
		public PositiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_positive; }
	 
		public PositiveContext() { }
		public void copyFrom(PositiveContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PositiveIntegerContext extends PositiveContext {
		public TerminalNode INT_NUM() { return getToken(DartGrammarsParser.INT_NUM, 0); }
		public PositiveIntegerContext(PositiveContext ctx) { copyFrom(ctx); }
	}
	public static class PositiveDoubleContext extends PositiveContext {
		public TerminalNode DOUBLE_NUM() { return getToken(DartGrammarsParser.DOUBLE_NUM, 0); }
		public PositiveDoubleContext(PositiveContext ctx) { copyFrom(ctx); }
	}

	public final PositiveContext positive() throws RecognitionException {
		PositiveContext _localctx = new PositiveContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_positive);
		try {
			setState(224);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT_NUM:
				_localctx = new PositiveIntegerContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(222);
				match(INT_NUM);
				}
				break;
			case DOUBLE_NUM:
				_localctx = new PositiveDoubleContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(223);
				match(DOUBLE_NUM);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NegativeContext extends ParserRuleContext {
		public NegativeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_negative; }
	 
		public NegativeContext() { }
		public void copyFrom(NegativeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NegativeIntegerContext extends NegativeContext {
		public TerminalNode INT_NUM() { return getToken(DartGrammarsParser.INT_NUM, 0); }
		public NegativeIntegerContext(NegativeContext ctx) { copyFrom(ctx); }
	}
	public static class NegativeDoubleContext extends NegativeContext {
		public TerminalNode DOUBLE_NUM() { return getToken(DartGrammarsParser.DOUBLE_NUM, 0); }
		public NegativeDoubleContext(NegativeContext ctx) { copyFrom(ctx); }
	}

	public final NegativeContext negative() throws RecognitionException {
		NegativeContext _localctx = new NegativeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_negative);
		try {
			setState(230);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new NegativeIntegerContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(226);
				match(T__0);
				setState(227);
				match(INT_NUM);
				}
				break;
			case 2:
				_localctx = new NegativeDoubleContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(228);
				match(T__0);
				setState(229);
				match(DOUBLE_NUM);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}
